@@ -2,4 +2,6 @@
 
 
 22.02.2017
-added ability to save cover from browser clipboard
+
+x fix sync triger on cover update
++ added ability to save cover from browser clipboard
